--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
       <div class="footer-container">
 
-        <a class="legales" href="">Legales</a>
+        <a class="legales" href="secciones/legales.html">Legales</a>
 
         <p class="copyright">© 2022 A Los Pedazos Agencia Digital.</p>
         <p class="contactanos">Si te gustó esta web, contáctanos.</p>
