--- a/secciones/club-del-vino.html
+++ b/secciones/club-del-vino.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="club-del-vino-styles.css">
+    <link rel="stylesheet" href="../css/club-del-vino-styles.css">
     <link rel="icon" type="image/x-icon" href="/images/favicom-01.png">
     <title>Corcho, tienda de bebidas</title>
 </head>
