--- a/secciones/club-del-vino.html
+++ b/secciones/club-del-vino.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/club-del-vino-styles.css">
     <link rel="icon" type="image/x-icon" href="/images/favicom-01.png">
     <title>Corcho, tienda de bebidas</title>
@@ -76,15 +76,14 @@
 
       <div class="footer-container">
 
-        <a class="legales" href="">Legales</a>
+        <a class="legales" href="secciones/legales.html">Legales</a>
 
-
-        <p class="copyright">© 2022 A Los Pedazos Agencia Digital.</p>
-        <p class="contactanos">Si te gustó esta web, contáctanos.</p>
+        <a href="https://www.alpagenciadigital.com/" class="copyright">© 2022 A Los Pedazos Agencia Digital</a>
+        <p class="contactanos">Si te gustó esta web, contáctanos</p>
 
         <div class="redes-sociales">
-          <a href=""><i class="bi bi-whatsapp"></i></a>
-          <a href=""><i class="bi bi-globe2"></i></a>
+          <a href="https://api.whatsapp.com/send/?phone=541148706906&text=Hola%2C+quisiera+obtener+m%C3%A1s+informaci%C3%B3n+sobre+los+servicios+de+comunicaci%C3%B3n+que+ofrec%C3%A9s.&type=phone_number&app_absent=0"><i class="bi bi-whatsapp"></i></a>
+          <a href="https://www.alpagenciadigital.com/"><i class="bi bi-globe2"></i></a>
         </div>
 
       </div>
