--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <link rel="icon" type="image/x-icon" href="/images/comentarios/L1.png">
     <title>Corcho, tienda de bebidas</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-05D6G5E6DB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-05D6G5E6DB');
+</script>
+
 <body>
     
     <!-- MENÚ (bootstrap)-->
@@ -58,7 +69,7 @@
                 </div>
             </div>
 
-            <img class="imagen-producto" src="images/comentarios/vino-01.png" alt="botella de vino">
+            <img class="imagen-producto" src="images/vino-01.png" alt="botella de vino">
 
         </div>
         
@@ -169,7 +180,7 @@
          <div class="contenedor-google">
 
             <div class="contenedor-logo">
-              <img class="logo-google" src="images/comentarios/google.png" alt="estrellas de puntuación">
+              <img class="logo-google" src="images/google.png" alt="estrellas de puntuación">
             </div>
 
           <div class="contenedor-titulo-estrellas">
