--- a/secciones/club-del-vino.html
+++ b/secciones/club-del-vino.html
@@ -14,6 +14,17 @@
     <link rel="icon" type="image/x-icon" href="/images/favicom-01.png">
     <title>Corcho, tienda de bebidas</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-05D6G5E6DB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-05D6G5E6DB');
+</script>
+
 <body>
     
     <!-- MENÚ (bootstrap)-->
