--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#ancla-mapa">¿Cómo llegar?</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="secciones/club-del-vino.html">Club del Vino</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -77,22 +80,22 @@
 
         <!-- BOTÓN CLUB DEL VINO-->
 
-        <!-- DESHABILITADO
         <div class="boton-club-del-vino">
 
           <div class="contenedor-texto-titulo-club-del-vino">
 
             <h2 class="gm-font-type titulo-club-del-vino">Club del Vino</h2>
           
-            <p class="gm-font-type texto-club-del-vino">Obtené la membresía de nuestro Club del Vino y recibí todos los meses en tu casa todos los mejores vinos seleccionados.</p>
+            <p class="gm-font-type texto-club-del-vino">
+              Obtené la membresía de nuestro Club del Vino y recibí cada mes en tu casa una cuidada selección de vinos destacados.
+            </p>
 
           </div>
 
-          <a class="gm-font-type gm-botones-club-del-vino" href="">Inscribirme</a>
+          <a class="gm-font-type gm-botones-club-del-vino" href="secciones/club-del-vino.html">Conocer más</a>
 
         </div>
-        -->
-
+        
         <!-- FIN BOTÓN CLUB DEL VINO-->
 
         <!-- DESCRIPCIÓN MARCA Y FORMULARIO-->
@@ -241,7 +244,6 @@
 
     <script> //Genera la fecha del día y se la suma al formulario para que nos llegue en la base de datos
       date = new Date().toLocaleDateString();
-      document.write(date);
       let fechaActual = document.getElementById("fecha");
       fechaActual.value = date;  
     </script>
