--- a/secciones/club-del-vino.html
+++ b/secciones/club-del-vino.html
@@ -38,10 +38,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="club-del-vino.html">Club del vino</a>
+                <a class="nav-link" href="../index.html#ancla-mapa">¿Cómo llegar?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#ancla-mapa">¿Cómo llegar?</a>
+                <a class="nav-link" href="legales.html">Legales</a>
               </li>
             </ul>
           </div>
@@ -58,26 +58,88 @@
 
             <div class="fondo-jumbotron-club"> </div>
 
-            <h1 class="titulo-club">Legales</h1>
+            <h1 class="titulo-club">Club del Vino</h1>
 
         </div>
 
-        <!-- TEXTO-->
+        <!-- INTRODUCCIÓN-->
 
+        <div class="body-introduccion">
 
-        <ul class="lista-legales">
+          <p class="color-terciary">Corcho</p>
+          <h2 class="titulo-body-introduccion">Bienvenido a tu club</h2>
+          <p class="color-secondary">Club</p>
+  
+        </div>
 
-            <li class="elemento-lista" type="disc">Corcho es una marca registrada.</li>
+         <!--Texto introducción-->
 
-            <li class="elemento-lista" type="disc">Está página es exclusivamente para mayores de 18 años.</li>
-            
-            <li class="elemento-lista" type="disc">Está página utiliza solamente fotografías propias y fotografías de uso gratuito (unsplash).</li>
+         <div class="info">
 
-            <li class="elemento-lista" type="disc"><span class="bold">La promoción del 10% de descuento al suscribirse</span> solo es válida una vez por cliente sin importar si se registran más de una vez y obtienen un nuevo cupón. A la hora de realizar la compra, es necesario avisar al personal de Corcho que quieren acceder al descuento obtenido y este le podría exigir el print de pantalla del cupón. Una vez utilizado el descuento figurará la operación en el sistema interno de Corcho y ya no podrá utilizar otro descuento correspondiente a esta misma promoción, pero si a otras promociones.</li>
+          <p class="texto-introduccion">El club del vino es una suscripción mensual creada para vos, que tenes ganas de conocer etiquetas  nuevas, explorar variedades y descubrir la viticultura argentina" La primer semana de cada mes vas a recibir dos vinos seleccionados con una carta de nuestra somelier y las fichas técnicas para que conozcas en profundidad cómo surgen los sabores de los vinos que tanto disfrutamos.</p> <span class="bold"></span>
 
-            <li class="elemento-lista" type="disc"><span class="bold">Términos y condiciones de la suscripción:</span> Corcho jamás venderá tu información ni le brindará tu información a ninguna persona física ni persona jurídica. El objetivo de la recolección de datos es meramente informar y enviar promociones a los clientes de Corcho.</li>
- 
-        </ul>
+          <div class="contenedor-boton">
+            <a href="https://forms.gle/1tjPkPKSr5pLuRuX9" class="boton-formulario gm-botones-club-del-vino">Suscribirse</a>
+          </div>
+        
+        </div>
+
+        <!-- INFORMACIÓN Y CALL TO ACTION-->
+
+        <div class="contenedor-info-imagen">
+
+        <div class="contenedor-imagen">
+          <img src="../images/vino-01.png" alt="" class="imagen-club-del-vino-2">
+        </div>
+
+        <!--Tarjeta-->
+
+        <div class="tarjeta tarjeta1">
+
+          <div class="titulos-tarjetas">
+              <p class="titulo-1">Suscripción Bouquet</p>
+              <p class="precio precioPresencial">$15.000</p> 
+              <p class="bajada">Ideal para descubrir nuevos sabores</p>
+          </div>
+
+          <div class="button-tarjetas-contenedor">
+            <a href="https://forms.gle/1tjPkPKSr5pLuRuX9" class="boton-formulario gm-botones-club-del-vino">Suscribirse</a>
+          </div>
+
+          <div class="listado-tarjetas-contenedor">
+
+              <div class="elemento-lista-tarjeta">
+                  <div>
+                    <img src="../images/tilde.png" alt="tilde">
+                  </div>
+                  <p>2 vinos seleccionados por mes</p>
+              </div>
+
+              <div class="elemento-lista-tarjeta">
+                <div>
+                  <img src="../images/tilde.png" alt="tilde">
+                </div>
+                <p>Carta de sommelier</p>
+              </div>
+
+              <div class="elemento-lista-tarjeta">
+                <div>
+                  <img src="../images/tilde.png" alt="tilde">
+                </div>
+                <p>Ficha técnica</p>
+              </div>
+
+              <div class="elemento-lista-tarjeta">
+                <div>
+                  <img src="../images/tilde.png" alt="tilde">
+                </div>
+                <p>Recomendación de maridaje</p>
+              </div>
+
+        </div>
+
+      </div>
+
 
     </MAIN>
 
