--- a/secciones/legales.html
+++ b/secciones/legales.html
@@ -31,7 +31,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light gm-font-type">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">CORCHO</a>
+          <a class="navbar-brand" href="../index.html">CORCHO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="club-del-vino.html">Club del vino</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#ancla-mapa">¿Cómo llegar?</a>
+                <a class="nav-link" href="../index.html#ancla-mapa">¿Cómo llegar?</a>
               </li>
             </ul>
           </div>
