--- a/secciones/club-del-vino.html
+++ b/secciones/club-del-vino.html
@@ -31,17 +31,17 @@
 
     <nav class="navbar navbar-expand-lg bg-light gm-font-type">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">CORCHO</a>
+          <a class="navbar-brand" href="../index.html">CORCHO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="../index.html#ancla-mapa">¿Cómo llegar?</a>
+                <a class="nav-link" href="legales.html">Legales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="legales.html">Legales</a>
+                <a class="nav-link" href="../index.html#ancla-mapa">¿Cómo llegar?</a>
               </li>
             </ul>
           </div>
@@ -98,7 +98,7 @@
 
           <div class="titulos-tarjetas">
               <p class="titulo-1">Suscripción Bouquet</p>
-              <p class="precio precioPresencial">$15.000</p> 
+              <p class="precio precioPresencial">$18.000</p> 
               <p class="bajada">Ideal para descubrir nuevos sabores</p>
           </div>
 
